// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input label label should have a htmlFor prop equals to the used id 1`] = `
.emotion-2 {
  background-color: #FFFFFF;
  border: solid 1px #AAAAB9;
  border-radius: 2px;
  color: #3A3A47;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-2[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-2[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-2[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-2:required {
  box-shadow: none;
}

.emotion-2:hover {
  border-color: #8F8FA2;
}

.emotion-2:active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-2:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-1 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  color: #3A3A47;
  line-height: 1rem;
  background: #FFFFFF;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  outline: 0;
}

.emotion-1::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-1::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-1:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-1::placeholder {
  color: #AAAAB9;
}

.emotion-1:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-3 {
  position: relative;
}

.emotion-0 {
  font-weight: bold;
  display: block;
  margin-bottom: 0.25rem;
  line-height: 20px;
}

<div>
  <div
    class="emotion-4"
  >
    <label
      class="emotion-0"
      for="foo"
    >
      Foo
    </label>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-12-label"
      role="combobox"
    >
      <div
        class="emotion-2"
      >
        <input
          aria-autocomplete="list"
          autocomplete="off"
          class="emotion-1"
          id="downshift-12-input"
          placeholder="Select a value..."
          type="text"
          value=""
        />
      </div>
      <div
        class="emotion-3"
      />
    </div>
  </div>
</div>
`;

exports[`input label should use aria-labelledby equals to an auto-assigned label id, if "id" is not provided 1`] = `
.emotion-2 {
  background-color: #FFFFFF;
  border: solid 1px #AAAAB9;
  border-radius: 2px;
  color: #3A3A47;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-2[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-2[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-2[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-2:required {
  box-shadow: none;
}

.emotion-2:hover {
  border-color: #8F8FA2;
}

.emotion-2:active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-2:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-1 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  color: #3A3A47;
  line-height: 1rem;
  background: #FFFFFF;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  outline: 0;
}

.emotion-1::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-1::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-1:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-1::placeholder {
  color: #AAAAB9;
}

.emotion-1:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-3 {
  position: relative;
}

.emotion-0 {
  font-weight: bold;
  display: block;
  margin-bottom: 0.25rem;
  line-height: 20px;
}

<div>
  <div
    class="emotion-4"
  >
    <label
      class="emotion-0"
      id="label-abc"
    >
      test
    </label>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="label-abc"
      role="combobox"
    >
      <div
        class="emotion-2"
      >
        <input
          aria-autocomplete="list"
          aria-labelledby="label-abc"
          autocomplete="off"
          class="emotion-1"
          id="downshift-13-input"
          placeholder="Select a value..."
          type="text"
          value=""
        />
      </div>
      <div
        class="emotion-3"
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly when closed 1`] = `
.emotion-1 {
  background-color: #FFFFFF;
  border: solid 1px #AAAAB9;
  border-radius: 2px;
  color: #3A3A47;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-1:required {
  box-shadow: none;
}

.emotion-1:hover {
  border-color: #8F8FA2;
}

.emotion-1:active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-1:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  color: #3A3A47;
  line-height: 1rem;
  background: #FFFFFF;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  outline: 0;
}

.emotion-0::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-0:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::placeholder {
  color: #AAAAB9;
}

.emotion-0:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-2 {
  position: relative;
}

<div>
  <div
    class="emotion-3"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-0-label"
      role="combobox"
    >
      <div
        class="emotion-1"
      >
        <input
          aria-autocomplete="list"
          autocomplete="off"
          class="emotion-0"
          id="downshift-0-input"
          placeholder="Select a value..."
          type="text"
          value=""
        />
      </div>
      <div
        class="emotion-2"
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly when opened 1`] = `
.emotion-1 {
  background-color: #FFFFFF;
  border: solid 1px #AAAAB9;
  border-radius: 2px;
  color: #3A3A47;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-1:required {
  box-shadow: none;
}

.emotion-1:hover {
  border-color: #8F8FA2;
}

.emotion-1:active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-1:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  color: #3A3A47;
  line-height: 1rem;
  background: #FFFFFF;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 0;
  outline: 0;
}

.emotion-0::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-0:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::placeholder {
  color: #AAAAB9;
}

.emotion-0:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-28 {
  position: relative;
}

.emotion-27 {
  list-style: none;
  margin: 0;
  padding: 0;
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  max-height: 20rem;
  overflow-y: auto;
  overflow-x: hidden;
  position: absolute;
  width: 100%;
  z-index: 1300;
}

.emotion-6 {
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.325rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
}

.emotion-6:last-of-type {
  border-bottom: none;
}

.emotion-6:hover {
  background: #F0F0F5;
}

.emotion-5 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 0.5rem;
}

.emotion-4 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  background-color: #FFFFFF;
  border: 1px solid #AAAAB9;
  border-radius: 2px;
  display: inline-block;
  height: 16px;
  position: relative;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  vertical-align: middle;
  width: 16px;
}

.emotion-2 {
  opacity: 0;
  margin-right: -13px;
}

.emotion-2:hover + .emotion-3 {
  border-color: #696979;
}

.emotion-2:checked + .emotion-3 {
  background-color: #0069D0;
  border-color: #0069D0;
}

.emotion-2:checked + .emotion-3:after {
  content: "";
  border-right: 2px solid #FFFFFF;
  border-bottom: 2px solid #FFFFFF;
  position: absolute;
  width: 6px;
  height: 10px;
  top: 1px;
  left: 4px;
  opacity: 1;
  -webkit-transform: rotate(45deg) scale(1);
  -ms-transform: rotate(45deg) scale(1);
  transform: rotate(45deg) scale(1);
  -webkit-transition: opacity .2s ease;
  transition: opacity .2s ease;
}

.emotion-2:indeterminate + .emotion-3 {
  background-color: #FFFFFF;
  border-color: #0069D0;
}

.emotion-2:indeterminate + .emotion-3:after {
  content: "";
  border-bottom: 2px solid #0069D0;
  position: absolute;
  top: -1px;
  left: 3px;
  width: 8px;
  height: 10px;
  opacity: 1;
  -webkit-transition: opacity .2s ease;
  transition: opacity .2s ease;
}

.emotion-2:focus + .emotion-3 {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-2:disabled + .emotion-3 {
  background-color: #F0F0F5;
  border-color: #F0F0F5;
}

.emotion-2:disabled + .emotion-3 + .css-tue92x {
  color: #AAAAB9;
}

<div>
  <div
    class="emotion-29"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-1-label"
      aria-owns="downshift-1-menu"
      role="combobox"
    >
      <div
        class="emotion-1"
      >
        <input
          aria-autocomplete="list"
          aria-controls="downshift-1-menu"
          autocomplete="off"
          class="emotion-0"
          id="downshift-1-input"
          placeholder="Select a value..."
          type="text"
          value=""
        />
      </div>
      <div
        class="emotion-28"
      >
        <ul
          aria-labelledby="downshift-1-label"
          class="emotion-27"
          id="downshift-1-menu"
          role="listbox"
        >
          <li
            aria-selected="false"
            class="emotion-6"
            id="downshift-1-item-0"
            role="option"
          >
            <div
              class="emotion-5"
            >
              <label
                class="emotion-4"
              >
                <input
                  class="emotion-2"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-3"
                />
              </label>
              Apple
            </div>
          </li>
          <li
            aria-selected="false"
            class="emotion-6"
            id="downshift-1-item-1"
            role="option"
          >
            <div
              class="emotion-5"
            >
              <label
                class="emotion-4"
              >
                <input
                  class="emotion-2"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-3"
                />
              </label>
              Banana
            </div>
          </li>
          <li
            aria-selected="false"
            class="emotion-6"
            id="downshift-1-item-2"
            role="option"
          >
            <div
              class="emotion-5"
            >
              <label
                class="emotion-4"
              >
                <input
                  class="emotion-2"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-3"
                />
              </label>
              Grape
            </div>
          </li>
          <li
            aria-selected="false"
            class="emotion-6"
            id="downshift-1-item-3"
            role="option"
          >
            <div
              class="emotion-5"
            >
              <label
                class="emotion-4"
              >
                <input
                  class="emotion-2"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-3"
                />
              </label>
              Orange
            </div>
          </li>
          <li
            aria-selected="false"
            class="emotion-6"
            id="downshift-1-item-4"
            role="option"
          >
            <div
              class="emotion-5"
            >
              <label
                class="emotion-4"
              >
                <input
                  class="emotion-2"
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="emotion-3"
                />
              </label>
              Pear
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
